⚠⚠⚠ CHANGER STRUCTURE DE DONNEES LIST -> MAP ⚠⚠⚠